--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,7 @@
         <module>anubis-application</module>
         <module>anubis-starter</module>
         <module>anubis-domain</module>
-        <module>report</module>
     </modules>
-    <parent>
-        <groupId>com.guming</groupId>
-        <artifactId>guming-parent</artifactId>
-        <version>1.1.0</version>
-    </parent>
     <properties>
         <revision>0.0.2-RELEASE</revision>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -28,16 +22,16 @@
         <targetBytecode>1.8</targetBytecode>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mapstruct.version>1.3.1.Final</mapstruct.version>
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
         <guming-common-framework.version>1.3.8</guming-common-framework.version>
         <ons-client.version>1.0.6</ons-client.version>
         <cglib.version>3.1</cglib.version>
         <oss.version>3.1.0</oss.version>
         <dingtalk.sdk.version>2.0.3-RELEASE</dingtalk.sdk.version>
         <uuc.api.version>3.3.4</uuc.api.version>
-        <h2.version>2.1.210</h2.version>
-        <mockito.version>4.5.0</mockito.version>
-        <byte-buddy.version>1.12.9</byte-buddy.version>
+        <h2.version>2.2.224</h2.version>
+        <mockito.version>5.2.0</mockito.version>
+        <byte-buddy.version>1.14.18</byte-buddy.version>
         <guava.version>25.1-jre</guava.version>
         <spring-clound.version>2.2.2.RELEASE</spring-clound.version>
         <mockito.version>4.5.0</mockito.version>
@@ -58,7 +52,7 @@
         <dingtalk.sdk.version>2.0.3-RELEASE</dingtalk.sdk.version>
         <gmavenplus-plugin.version>1.7.1</gmavenplus-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
-        <distributed-lock.version>1.0.3</distributed-lock.version>
+        <rocketmq.version>2.3.0</rocketmq.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -93,13 +87,8 @@
             <!-- mapstruct -->
             <dependency>
                 <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct-jdk8</artifactId>
-                <version>${mapstruct.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct-processor</artifactId>
-                <version>${mapstruct.version}</version>
+                <artifactId>mapstruct</artifactId>
+                <version>1.5.3.Final</version>
             </dependency>
             <!-- cglib -->
             <dependency>
@@ -107,18 +96,11 @@
                 <artifactId>cglib</artifactId>
                 <version>${cglib.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>com.guming</groupId>
                 <artifactId>dingtalk-sdk</artifactId>
                 <version>${dingtalk.sdk.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.guming</groupId>
-                <artifactId>uuc-api</artifactId>
-                <version>${uuc.api.version}</version>
-            </dependency>
-
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
@@ -174,19 +156,9 @@
                 <version>${spockframework.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.h2database</groupId>
-                <artifactId>h2</artifactId>
-                <version>${h2database.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.dbunit</groupId>
                 <artifactId>dbunit</artifactId>
                 <version>${dbunit.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.github.janbols</groupId>
-                <artifactId>spock-dbunit</artifactId>
-                <version>${spock-dbunit.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.microwww</groupId>
@@ -201,7 +173,7 @@
             <dependency>
                 <groupId>org.junit.platform</groupId>
                 <artifactId>junit-platform-engine</artifactId>
-                <version>1.9.0</version>
+                <version>1.10.3</version>
             </dependency>
             <dependency>
                 <groupId>org.powermock</groupId>
@@ -214,11 +186,6 @@
                 <version>${powermock.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.guming</groupId>
-                <artifactId>sdk-log4j2</artifactId>
-                <version>${sdk-log4j2.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.xuxueli</groupId>
                 <artifactId>xxl-job-core</artifactId>
                 <version>${xxl-job.version}</version>
@@ -229,9 +196,9 @@
                 <version>${oss.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.guming.fd</groupId>
-                <artifactId>distributed-lock-client</artifactId>
-                <version>${distributed-lock.version}</version>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot</artifactId>
+                <version>${rocketmq.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -262,31 +229,6 @@
                         @{surefireArgLine}
                     </argLine>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.gmavenplus</groupId>
-                <artifactId>gmavenplus-plugin</artifactId>
-                <version>${gmavenplus-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>addSources</goal>
-                            <goal>addTestSources</goal>
-                            <goal>generateStubs</goal>
-                            <goal>compile</goal>
-                            <goal>generateTestStubs</goal>
-                            <goal>compileTests</goal>
-                            <goal>removeStubs</goal>
-                            <goal>removeTestStubs</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>${sonar-maven-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
